set(INCLUDE_FILES
  Includes/Pcf/System/ComponentModel/CancelEventArgs.h
  Includes/Pcf/System/ComponentModel/CancelEventHandler.h
  Includes/Pcf/System/ComponentModel/Component.h
  Includes/Pcf/System/ComponentModel/ComponentCollection.h
  Includes/Pcf/System/ComponentModel/IComponent.h
  Includes/Pcf/System/ComponentModel/IContainer.h
  Includes/Pcf/System/ComponentModel/ISite.h
  Includes/Pcf/System/Media/SystemSound.h
  Includes/Pcf/System/Media/SystemSounds.h
  Includes/Pcf/System/Windows/Forms/VisualStyles/VisualStyleState.h
  Includes/Pcf/System/Windows/Forms/AccessibleEvents.h
  Includes/Pcf/System/Windows/Forms/AccessibleNavigation.h
  Includes/Pcf/System/Windows/Forms/AccessibleRole.h
  Includes/Pcf/System/Windows/Forms/AnchorStyles.h
  Includes/Pcf/System/Windows/Forms/Application.h
  Includes/Pcf/System/Windows/Forms/ArrangeDirection.h
  Includes/Pcf/System/Windows/Forms/ArrangeStartingPosition.h
  Includes/Pcf/System/Windows/Forms/AutoSizeMode.h
  Includes/Pcf/System/Windows/Forms/BootMode.h
  Includes/Pcf/System/Windows/Forms/BorderStyle.h
  Includes/Pcf/System/Windows/Forms/Button.h
  Includes/Pcf/System/Windows/Forms/ButtonBase.h
  Includes/Pcf/System/Windows/Forms/CheckBox.h
#  Includes/Pcf/System/Windows/Forms/CheckedListBox.h
  Includes/Pcf/System/Windows/Forms/CloseReason.h
  Includes/Pcf/System/Windows/Forms/ContainerControl.h
  Includes/Pcf/System/Windows/Forms/Control.h
  Includes/Pcf/System/Windows/Forms/ControlEventArgs.h
  Includes/Pcf/System/Windows/Forms/ControlEventHandler.h
  Includes/Pcf/System/Windows/Forms/ControlStyles.h
#  Includes/Pcf/System/Windows/Forms/Cursor.h
#  Includes/Pcf/System/Windows/Forms/Cursors.h
  Includes/Pcf/System/Windows/Forms/DataFormats.h
  Includes/Pcf/System/Windows/Forms/DialogResult.h
  Includes/Pcf/System/Windows/Forms/DockStyle.h
  Includes/Pcf/System/Windows/Forms/DragDropEffects.h
  Includes/Pcf/System/Windows/Forms/DragEventArgs.h
  Includes/Pcf/System/Windows/Forms/DragEventHandler.h
#  Includes/Pcf/System/Windows/Forms/FolderBrowserDialog.h
  Includes/Pcf/System/Windows/Forms/Form.h
  Includes/Pcf/System/Windows/Forms/FormBorderStyle.h
  Includes/Pcf/System/Windows/Forms/FormClosedEventArgs.h
  Includes/Pcf/System/Windows/Forms/FormClosedEventHandler.h
  Includes/Pcf/System/Windows/Forms/FormClosingEventArgs.h
  Includes/Pcf/System/Windows/Forms/FormClosingEventHandler.h
  Includes/Pcf/System/Windows/Forms/FormStartPosition.h
  Includes/Pcf/System/Windows/Forms/GiveFeedbackEventArgs.h
  Includes/Pcf/System/Windows/Forms/GiveFeedbackEventHandler.h
#  Includes/Pcf/System/Windows/Forms/GroupBox.h
  Includes/Pcf/System/Windows/Forms/HelpEventArgs.h
  Includes/Pcf/System/Windows/Forms/HelpEventHandler.h
  Includes/Pcf/System/Windows/Forms/IDataObject.h
#  Includes/Pcf/System/Windows/Forms/ImageList.h
  Includes/Pcf/System/Windows/Forms/ImageLayout.h
  Includes/Pcf/System/Windows/Forms/InvalidateEventArgs.h
  Includes/Pcf/System/Windows/Forms/InvalidateEventHandler.h
  Includes/Pcf/System/Windows/Forms/KeyEventArgs.h
  Includes/Pcf/System/Windows/Forms/KeyEventHandler.h
  Includes/Pcf/System/Windows/Forms/KeyPressEventArgs.h
  Includes/Pcf/System/Windows/Forms/KeyPressEventHandler.h
  Includes/Pcf/System/Windows/Forms/Keys.h
  Includes/Pcf/System/Windows/Forms/Label.h
#  Includes/Pcf/System/Windows/Forms/ListBox.h
  Includes/Pcf/System/Windows/Forms/ListControl.h
#  Includes/Pcf/System/Windows/Forms/MainMenu.h
#  Includes/Pcf/System/Windows/Forms/MaskedTextBox.h
#  Includes/Pcf/System/Windows/Forms/Menu.h
#  Includes/Pcf/System/Windows/Forms/MenuItem.h
  Includes/Pcf/System/Windows/Forms/Message.h
  Includes/Pcf/System/Windows/Forms/MessageBox.h
  Includes/Pcf/System/Windows/Forms/MessageBoxButtons.h
  Includes/Pcf/System/Windows/Forms/MessageBoxDefaultButton.h
  Includes/Pcf/System/Windows/Forms/MessageBoxIcon.h
  Includes/Pcf/System/Windows/Forms/MessageBoxOptions.h
  Includes/Pcf/System/Windows/Forms/MethodInvoker.h
  Includes/Pcf/System/Windows/Forms/MouseButtons.h
  Includes/Pcf/System/Windows/Forms/MouseEventArgs.h
  Includes/Pcf/System/Windows/Forms/MouseEventHandler.h
#  Includes/Pcf/System/Windows/Forms/NumericUpDown.h
#  Includes/Pcf/System/Windows/Forms/OpenFileDialog.h
  Includes/Pcf/System/Windows/Forms/PaintEventArgs.h
  Includes/Pcf/System/Windows/Forms/PaintEventHandler.h
  Includes/Pcf/System/Windows/Forms/Panel.h
#  Includes/Pcf/System/Windows/Forms/PictureBox.h
  Includes/Pcf/System/Windows/Forms/ProgressBar.h
  Includes/Pcf/System/Windows/Forms/ProgressBarStyle.h
  Includes/Pcf/System/Windows/Forms/RadioButton.h
#  Includes/Pcf/System/Windows/Forms/RichTextBox.h
#  Includes/Pcf/System/Windows/Forms/SaveFileDialog.h
#  Includes/Pcf/System/Windows/Forms/Screen.h
  Includes/Pcf/System/Windows/Forms/ScrollableControl.h
  Includes/Pcf/System/Windows/Forms/Shortcut.h
  Includes/Pcf/System/Windows/Forms/SystemInformation.h
#  Includes/Pcf/System/Windows/Forms/TabControl.h
#  Includes/Pcf/System/Windows/Forms/TabPage.h
#  Includes/Pcf/System/Windows/Forms/TextBox.h
#  Includes/Pcf/System/Windows/Forms/Timer.h
  Includes/Pcf/System/Windows/Forms/UICues.h
  Includes/Pcf/System/Windows/Forms/UICuesEventArgs.h
  Includes/Pcf/System/Windows/Forms/UICuesEventHandler.h
 Includes/Pcf/Forms.h
)

set(SOURCE_FILES
  Sources/__OS/ApplicationWin32.cpp
  Sources/__OS/ButtonWin32.cpp
  Sources/__OS/ControlWin32.cpp
  Sources/__OS/CheckBoxWin32.cpp
  Sources/__OS/FormsApi.h
  Sources/__OS/FormsApiFltk.cpp
  Sources/__OS/FormsApiGtk.cpp
  Sources/__OS/FormWin32.cpp
  Sources/__OS/LabelWin32.cpp
  Sources/__OS/MainWin32.cpp
  Sources/__OS/PanelWin32.cpp
  Sources/__OS/ProgressBarWin32.cpp
  Sources/__OS/RadioButtonWin32.cpp
  Sources/__OS/SystemInformationFltk.cpp
  Sources/__OS/SystemInformationGtk.cpp
  Sources/__OS/SystemInformationWin32.cpp
  Sources/__OS/WindowMessage.h
  Sources/__OS/WindowMessageKey.h
  Sources/__OS/WindowProcedureWin32.cpp
  Sources/__OS/WindowProcedureWin32.h
  Sources/Pcf/System/Media/SystemSound.cpp
  Sources/Pcf/System/Media/SystemSounds.cpp
  Sources/Pcf/System/Windows/Forms/Application.cpp
  Sources/Pcf/System/Windows/Forms/Button.cpp
  Sources/Pcf/System/Windows/Forms/CheckBox.cpp
#  Sources/Pcf/System/Windows/Forms/CheckedListBox.cpp
  Sources/Pcf/System/Windows/Forms/Control.cpp
#  Sources/Pcf/System/Windows/Forms/Cursor.cpp
#  Sources/Pcf/System/Windows/Forms/Cursors.cpp
#  Sources/Pcf/System/Windows/Forms/Exclamation.h
#  Sources/Pcf/System/Windows/Forms/FolderBrowserDialog.cpp
  Sources/Pcf/System/Windows/Forms/Form.cpp
#  Sources/Pcf/System/Windows/Forms/GroupBox.cpp
#  Sources/Pcf/System/Windows/Forms/ImageList.cpp
#  Sources/Pcf/System/Windows/Forms/Information.h
  Sources/Pcf/System/Windows/Forms/Label.cpp
#  Sources/Pcf/System/Windows/Forms/ListBox.cpp
#  Sources/Pcf/System/Windows/Forms/MainMenu.cpp
#  Sources/Pcf/System/Windows/Forms/MaskedTextBox.cpp
#  Sources/Pcf/System/Windows/Forms/Menu.cpp
#  Sources/Pcf/System/Windows/Forms/MenuItem.cpp
  Sources/Pcf/System/Windows/Forms/Message.cpp
  Sources/Pcf/System/Windows/Forms/MessageBox.cpp
#  Sources/Pcf/System/Windows/Forms/NumericUpDown.cpp
#  Sources/Pcf/System/Windows/Forms/OpenFileDialog.cpp
  Sources/Pcf/System/Windows/Forms/Panel.cpp
#  Sources/Pcf/System/Windows/Forms/PictureBox.cpp
  Sources/Pcf/System/Windows/Forms/ProgressBar.cpp
#  Sources/Pcf/System/Windows/Forms/Question.h
  Sources/Pcf/System/Windows/Forms/RadioButton.cpp
#  Sources/Pcf/System/Windows/Forms/RichTextBox.cpp
#  Sources/Pcf/System/Windows/Forms/SaveFileDialog.cpp
#  Sources/Pcf/System/Windows/Forms/Screen.cpp
#  Sources/Pcf/System/Windows/Forms/Stop.h
  Sources/Pcf/System/Windows/Forms/SystemInformation.cpp
#  Sources/Pcf/System/Windows/Forms/TabControl.cpp
#  Sources/Pcf/System/Windows/Forms/TextBox.cpp
#  Sources/Pcf/System/Windows/Forms/Timer.cpp
)

if (APPLE)
set(COCOA_SOURCE_FILES
  Sources/__OS/ApplicationCocoa.mm
  Sources/__OS/ButtonCocoa.mm
  Sources/__OS/FormsApiCocoa.mm
  Sources/__OS/SystemInformationCocoa.mm
  Sources/__OS/WindowProcedureCocoa.h
  Sources/__OS/WindowProcedureCocoa.mm
)
endif ()

source_group(Includes REGULAR_EXPRESSION "/Includes/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf\\System REGULAR_EXPRESSION "/Includes/Pcf/System/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf\\System\\ComponentModel REGULAR_EXPRESSION "/Includes/Pcf/System/ComponentModel/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf\\System\\Media REGULAR_EXPRESSION "/Includes/Pcf/System/Media/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf\\System\\Windows REGULAR_EXPRESSION "/Includes/Pcf/System/Windows/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf\\System\\Windows\\Forms REGULAR_EXPRESSION "/Includes/Pcf/System/Windows/Forms/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf\\System\\Windows\\Forms\\VisualStyles REGULAR_EXPRESSION "/Includes/Pcf/System/Windows/Forms/VisualStyles/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf REGULAR_EXPRESSION "/Includes/Pcf/[-_,A-Za-z0-9]+\\.h*")
source_group(Includes\\Pcf REGULAR_EXPRESSION "/Includes/Pcf/[-_,A-Za-z0-9]")

source_group(Sources REGULAR_EXPRESSION "/Sources/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\__OS REGULAR_EXPRESSION "/Sources/__OS/[-_,A-Za-z0-9]+\\.*")
source_group(Sources\\Pcf REGULAR_EXPRESSION "/Sources/Pcf/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System REGULAR_EXPRESSION "/Sources/Pcf/System/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\ComponentModel REGULAR_EXPRESSION "/Sources/Pcf/System/ComponentModel/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Media REGULAR_EXPRESSION "/Sources/Pcf/System/Media/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Windows REGULAR_EXPRESSION "/Sources/Pcf/System/Windows/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Windows\\Forms REGULAR_EXPRESSION "/Sources/Pcf/System/Windows/Forms/[-_,A-Za-z0-9]+\\.(c*|h*|m*)")
source_group(Sources\\Pcf\\System\\Windows\\Forms\\VisualStyles REGULAR_EXPRESSION "/Sources/Pcf/System/Windows/Forms/VisualStyles/[-_,A-Za-z0-9]+\\.c*")

add_library(Pcf.Forms STATIC ${INCLUDE_FILES} ${SOURCE_FILES} ${COCOA_SOURCE_FILES})
target_include_directories(Pcf.Forms PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Includes> $<INSTALL_INTERFACE:include>)
target_link_libraries(Pcf.Forms Pcf.Drawing)
set_target_properties(Pcf.Forms PROPERTIES FOLDER Pcf/Forms)

if (BUILD_FORMS_MANUAL_TESTS)
add_subdirectory("ManualTests")
endif ()

if (BUILD_FORMS_UNIT_TESTS)
add_subdirectory("UnitTests")
endif ()

install(TARGETS Pcf.Forms EXPORT Pcf DESTINATION lib)
install(DIRECTORY "Includes/Pcf/." DESTINATION include/Pcf)
if(MSVC)
  target_compile_options(Pcf.Forms PRIVATE "$<$<CONFIG:Debug>:/Fd$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms${CMAKE_DEBUG_POSTFIX}.pdb>")
  target_compile_options(Pcf.Forms PRIVATE "$<$<CONFIG:Release>:/Fd$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms::pdb>")
  install(FILES "$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms${CMAKE_DEBUG_POSTFIX}.pdb" DESTINATION lib CONFIGURATIONS Debug OPTIONAL)
  install(FILES "$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms::pdb" DESTINATION lib CONFIGURATIONS Release OPTIONAL)
endif()
