set(INCLUDE_FILES
  Includes/Pcf/System/ComponentModel/CancelEventArgs.hpp
  Includes/Pcf/System/ComponentModel/CancelEventHandler.hpp
  Includes/Pcf/System/ComponentModel/Component.hpp
  Includes/Pcf/System/ComponentModel/ComponentCollection.hpp
  Includes/Pcf/System/ComponentModel/EventHandlerList.hpp
  Includes/Pcf/System/ComponentModel/IComponent.hpp
  Includes/Pcf/System/ComponentModel/IContainer.hpp
  Includes/Pcf/System/ComponentModel/ISite.hpp
  Includes/Pcf/System/Media/SystemSound.hpp
  Includes/Pcf/System/Media/SystemSounds.hpp
  Includes/Pcf/System/Windows/Forms/VisualStyles/VisualStyleState.hpp
  Includes/Pcf/System/Windows/Forms/AccessibleEvents.hpp
  Includes/Pcf/System/Windows/Forms/AccessibleNavigation.hpp
  Includes/Pcf/System/Windows/Forms/AccessibleRole.hpp
  Includes/Pcf/System/Windows/Forms/AnchorStyles.hpp
  Includes/Pcf/System/Windows/Forms/Application.hpp
  Includes/Pcf/System/Windows/Forms/ArrangeDirection.hpp
  Includes/Pcf/System/Windows/Forms/ArrangeStartingPosition.hpp
  Includes/Pcf/System/Windows/Forms/AutoSizeMode.hpp
  Includes/Pcf/System/Windows/Forms/BootMode.hpp
  Includes/Pcf/System/Windows/Forms/BorderStyle.hpp
  Includes/Pcf/System/Windows/Forms/Button.hpp
  Includes/Pcf/System/Windows/Forms/ButtonBase.hpp
  Includes/Pcf/System/Windows/Forms/CheckBox.hpp
#  Includes/Pcf/System/Windows/Forms/CheckedListBox.hpp
  Includes/Pcf/System/Windows/Forms/CheckState.hpp
  Includes/Pcf/System/Windows/Forms/CloseReason.hpp
  Includes/Pcf/System/Windows/Forms/ContainerControl.hpp
  Includes/Pcf/System/Windows/Forms/Control.hpp
  Includes/Pcf/System/Windows/Forms/ControlEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/ControlEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/ControlStyles.hpp
#  Includes/Pcf/System/Windows/Forms/Cursor.hpp
#  Includes/Pcf/System/Windows/Forms/Cursors.hpp
  Includes/Pcf/System/Windows/Forms/DataFormats.hpp
  Includes/Pcf/System/Windows/Forms/DialogResult.hpp
  Includes/Pcf/System/Windows/Forms/DockStyle.hpp
  Includes/Pcf/System/Windows/Forms/DragDropEffects.hpp
  Includes/Pcf/System/Windows/Forms/DragEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/DragEventHandler.hpp
#  Includes/Pcf/System/Windows/Forms/FolderBrowserDialog.hpp
  Includes/Pcf/System/Windows/Forms/Form.hpp
  Includes/Pcf/System/Windows/Forms/FormBorderStyle.hpp
  Includes/Pcf/System/Windows/Forms/FormClosedEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/FormClosedEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/FormClosingEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/FormClosingEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/FormStartPosition.hpp
  Includes/Pcf/System/Windows/Forms/GiveFeedbackEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/GiveFeedbackEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/GroupBox.hpp
  Includes/Pcf/System/Windows/Forms/HelpEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/HelpEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/IDataObject.hpp
#  Includes/Pcf/System/Windows/Forms/ImageList.hpp
  Includes/Pcf/System/Windows/Forms/ImageLayout.hpp
  Includes/Pcf/System/Windows/Forms/InvalidateEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/InvalidateEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/KeyEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/KeyEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/KeyPressEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/KeyPressEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/Keys.hpp
  Includes/Pcf/System/Windows/Forms/Label.hpp
#  Includes/Pcf/System/Windows/Forms/ListBox.hpp
  Includes/Pcf/System/Windows/Forms/ListControl.hpp
#  Includes/Pcf/System/Windows/Forms/MainMenu.hpp
#  Includes/Pcf/System/Windows/Forms/MaskedTextBox.hpp
#  Includes/Pcf/System/Windows/Forms/Menu.hpp
#  Includes/Pcf/System/Windows/Forms/MenuItem.hpp
  Includes/Pcf/System/Windows/Forms/Message.hpp
  Includes/Pcf/System/Windows/Forms/MessageBox.hpp
  Includes/Pcf/System/Windows/Forms/MessageBoxButtons.hpp
  Includes/Pcf/System/Windows/Forms/MessageBoxDefaultButton.hpp
  Includes/Pcf/System/Windows/Forms/MessageBoxIcon.hpp
  Includes/Pcf/System/Windows/Forms/MessageBoxOptions.hpp
  Includes/Pcf/System/Windows/Forms/MethodInvoker.hpp
  Includes/Pcf/System/Windows/Forms/MouseButtons.hpp
  Includes/Pcf/System/Windows/Forms/MouseEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/MouseEventHandler.hpp
#  Includes/Pcf/System/Windows/Forms/NumericUpDown.hpp
#  Includes/Pcf/System/Windows/Forms/OpenFileDialog.hpp
  Includes/Pcf/System/Windows/Forms/Orientation.hpp
  Includes/Pcf/System/Windows/Forms/PaintEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/PaintEventHandler.hpp
  Includes/Pcf/System/Windows/Forms/Panel.hpp
#  Includes/Pcf/System/Windows/Forms/PictureBox.hpp
  Includes/Pcf/System/Windows/Forms/ProgressBar.hpp
  Includes/Pcf/System/Windows/Forms/ProgressBarStyle.hpp
  Includes/Pcf/System/Windows/Forms/RadioButton.hpp
#  Includes/Pcf/System/Windows/Forms/RichTextBox.hpp
#  Includes/Pcf/System/Windows/Forms/SaveFileDialog.hpp
#  Includes/Pcf/System/Windows/Forms/Screen.hpp
  Includes/Pcf/System/Windows/Forms/ScrollableControl.hpp
  Includes/Pcf/System/Windows/Forms/Shortcut.hpp
  Includes/Pcf/System/Windows/Forms/SystemInformation.hpp
  Includes/Pcf/System/Windows/Forms/TabAlignment.hpp
  Includes/Pcf/System/Windows/Forms/TabControl.hpp
  Includes/Pcf/System/Windows/Forms/TabPage.hpp
#  Includes/Pcf/System/Windows/Forms/TextBox.hpp
  Includes/Pcf/System/Windows/Forms/TickStyle.hpp
  Includes/Pcf/System/Windows/Forms/Timer.hpp
  Includes/Pcf/System/Windows/Forms/TrackBar.hpp
  Includes/Pcf/System/Windows/Forms/UICues.hpp
  Includes/Pcf/System/Windows/Forms/UICuesEventArgs.hpp
  Includes/Pcf/System/Windows/Forms/UICuesEventHandler.hpp
  Includes/Pcf/Forms.hpp
)

set(SOURCE_FILES
  Sources/__OS/ApplicationCocoa.mm
  Sources/__OS/ApplicationGtk.cpp
  Sources/__OS/ApplicationWin32.cpp
  Sources/__OS/ButtonCocoa.mm
  Sources/__OS/ButtonGtk.cpp
  Sources/__OS/ButtonWin32.cpp
  Sources/__OS/CheckBoxCocoa.mm
  Sources/__OS/CheckBoxGtk.cpp
  Sources/__OS/CheckBoxWin32.cpp
  Sources/__OS/ControlCocoa.mm
  Sources/__OS/ControlGtk.cpp
  Sources/__OS/ControlWin32.cpp
  Sources/__OS/FormCocoa.mm
  Sources/__OS/FormsApi.hpp
  Sources/__OS/FormGtk.cpp
  Sources/__OS/FormWin32.cpp
  Sources/__OS/GroupBoxCocoa.mm
  Sources/__OS/GroupBoxGtk.cpp
  Sources/__OS/GroupBoxWin32.cpp
  Sources/__OS/LabelCocoa.mm
  Sources/__OS/LabelGtk.cpp
  Sources/__OS/LabelWin32.cpp
  Sources/__OS/MainWin32.cpp
  Sources/__OS/PanelCocoa.mm
  Sources/__OS/PanelGtk.cpp
  Sources/__OS/PanelWin32.cpp
  Sources/__OS/ProgressBarCocoa.mm
  Sources/__OS/ProgressBarGtk.cpp
  Sources/__OS/ProgressBarWin32.cpp
  Sources/__OS/RadioButtonCocoa.mm
  Sources/__OS/RadioButtonGtk.cpp
  Sources/__OS/RadioButtonWin32.cpp
  Sources/__OS/SystemInformationCocoa.mm
  Sources/__OS/SystemInformationGtk.cpp
  Sources/__OS/SystemInformationWin32.cpp
  Sources/__OS/TabControlCocoa.mm
  Sources/__OS/TabControlGtk.cpp
  Sources/__OS/TabControlWin32.cpp
  Sources/__OS/TabPageCocoa.mm
  Sources/__OS/TabPageGtk.cpp
  Sources/__OS/TabPageWin32.cpp
  Sources/__OS/TimerCocoa.mm
  Sources/__OS/TimerGtk.cpp
  Sources/__OS/TimerWin32.cpp
  Sources/__OS/TrackBarCocoa.mm
  Sources/__OS/TrackBarGtk.cpp
  Sources/__OS/TrackBarWin32.cpp
  Sources/__OS/WidgetCocoa.hpp
  Sources/__OS/WidgetGtk.hpp
  Sources/__OS/WindowMessage.hpp
  Sources/__OS/WindowMessageKey.hpp
  Sources/__OS/WindowProcedureCocoa.mm
  Sources/__OS/WindowProcedureWin32.cpp
  Sources/__OS/WindowProcedureCocoa.hpp
  Sources/__OS/WindowProcedureWin32.hpp
  Sources/Pcf/System/Media/SystemSound.cpp
  Sources/Pcf/System/Media/SystemSounds.cpp
  Sources/Pcf/System/Windows/Forms/Application.cpp
  Sources/Pcf/System/Windows/Forms/Button.cpp
  Sources/Pcf/System/Windows/Forms/CheckBox.cpp
#  Sources/Pcf/System/Windows/Forms/CheckedListBox.cpp
  Sources/Pcf/System/Windows/Forms/Control.cpp
#  Sources/Pcf/System/Windows/Forms/Cursor.cpp
#  Sources/Pcf/System/Windows/Forms/Cursors.cpp
#  Sources/Pcf/System/Windows/Forms/Exclamation.hpp
#  Sources/Pcf/System/Windows/Forms/FolderBrowserDialog.cpp
  Sources/Pcf/System/Windows/Forms/Form.cpp
  Sources/Pcf/System/Windows/Forms/GroupBox.cpp
#  Sources/Pcf/System/Windows/Forms/ImageList.cpp
#  Sources/Pcf/System/Windows/Forms/Information.hpp
  Sources/Pcf/System/Windows/Forms/Label.cpp
#  Sources/Pcf/System/Windows/Forms/ListBox.cpp
#  Sources/Pcf/System/Windows/Forms/MainMenu.cpp
#  Sources/Pcf/System/Windows/Forms/MaskedTextBox.cpp
#  Sources/Pcf/System/Windows/Forms/Menu.cpp
#  Sources/Pcf/System/Windows/Forms/MenuItem.cpp
  Sources/Pcf/System/Windows/Forms/Message.cpp
  Sources/Pcf/System/Windows/Forms/MessageBox.cpp
#  Sources/Pcf/System/Windows/Forms/NumericUpDown.cpp
#  Sources/Pcf/System/Windows/Forms/OpenFileDialog.cpp
  Sources/Pcf/System/Windows/Forms/Panel.cpp
#  Sources/Pcf/System/Windows/Forms/PictureBox.cpp
  Sources/Pcf/System/Windows/Forms/ProgressBar.cpp
#  Sources/Pcf/System/Windows/Forms/Question.hpp
  Sources/Pcf/System/Windows/Forms/RadioButton.cpp
#  Sources/Pcf/System/Windows/Forms/RichTextBox.cpp
#  Sources/Pcf/System/Windows/Forms/SaveFileDialog.cpp
#  Sources/Pcf/System/Windows/Forms/Screen.cpp
#  Sources/Pcf/System/Windows/Forms/Stop.hpp
  Sources/Pcf/System/Windows/Forms/SystemInformation.cpp
  Sources/Pcf/System/Windows/Forms/TabControl.cpp
  Sources/Pcf/System/Windows/Forms/TabPage.cpp
#  Sources/Pcf/System/Windows/Forms/TextBox.cpp
  Sources/Pcf/System/Windows/Forms/Timer.cpp
  Sources/Pcf/System/Windows/Forms/TrackBar.cpp
)

source_group(Includes REGULAR_EXPRESSION "/Includes/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System REGULAR_EXPRESSION "/Includes/Pcf/System/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\ComponentModel REGULAR_EXPRESSION "/Includes/Pcf/System/ComponentModel/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Media REGULAR_EXPRESSION "/Includes/Pcf/System/Media/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Windows REGULAR_EXPRESSION "/Includes/Pcf/System/Windows/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Windows\\Forms REGULAR_EXPRESSION "/Includes/Pcf/System/Windows/Forms/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Windows\\Forms\\VisualStyles REGULAR_EXPRESSION "/Includes/Pcf/System/Windows/Forms/VisualStyles/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf REGULAR_EXPRESSION "/Includes/Pcf/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf REGULAR_EXPRESSION "/Includes/Pcf/[-_,A-Za-z0-9]")

source_group(Sources REGULAR_EXPRESSION "/Sources/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\__OS REGULAR_EXPRESSION "/Sources/__OS/[-_,A-Za-z0-9]+\\.*")
source_group(Sources\\Pcf REGULAR_EXPRESSION "/Sources/Pcf/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System REGULAR_EXPRESSION "/Sources/Pcf/System/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\ComponentModel REGULAR_EXPRESSION "/Sources/Pcf/System/ComponentModel/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Media REGULAR_EXPRESSION "/Sources/Pcf/System/Media/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Windows REGULAR_EXPRESSION "/Sources/Pcf/System/Windows/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Windows\\Forms REGULAR_EXPRESSION "/Sources/Pcf/System/Windows/Forms/[-_,A-Za-z0-9]+\\.(c*|h*|m*)")
source_group(Sources\\Pcf\\System\\Windows\\Forms\\VisualStyles REGULAR_EXPRESSION "/Sources/Pcf/System/Windows/Forms/VisualStyles/[-_,A-Za-z0-9]+\\.c*")

add_library(Pcf.Forms STATIC ${INCLUDE_FILES} ${SOURCE_FILES})
target_include_directories(Pcf.Forms PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Includes> $<INSTALL_INTERFACE:include>)
target_link_libraries(Pcf.Forms Pcf.Drawing)
set_target_properties(Pcf.Forms PROPERTIES FOLDER Pcf/Forms)

add_subdirectory("ManualTests")
add_subdirectory("UnitTests")

install(TARGETS Pcf.Forms EXPORT Pcf DESTINATION lib)
install(DIRECTORY "Includes/Pcf/." DESTINATION include/Pcf)
if(MSVC)
  target_compile_options(Pcf.Forms PRIVATE "$<$<CONFIG:Debug>:/Fd$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms${CMAKE_DEBUG_POSTFIX}.pdb>")
  target_compile_options(Pcf.Forms PRIVATE "$<$<CONFIG:Release>:/Fd$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms::pdb>")
  install(FILES "$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms${CMAKE_DEBUG_POSTFIX}.pdb" DESTINATION lib CONFIGURATIONS Debug OPTIONAL)
  install(FILES "$<TARGET_FILE_DIR:Pcf.Forms>/Pcf.Forms::pdb" DESTINATION lib CONFIGURATIONS Release OPTIONAL)
endif()
