cmake_minimum_required(VERSION 3.2)

project(Examples)

option(BUILD_DESIGN_PATTERNS_EXAMPLES "Build DesignPatterns examples" ON)
option(BUILD_SWITCH_SYSTEM_EXAMPLES "Build Switch.System examples" ON)
option(BUILD_SWITCH_SYSTEM_DRAWING_EXAMPLES "Build Switch.System.Drawing examples" ON)
option(BUILD_SWITCH_SYSTEM_WINDOWS_FORMS_EXAMPLES "Build SwitchSystem.Windows.Forms examples" ON)
option(BUILD_SWITCH_TUNIT_EXAMPLES "Build Switch.TUnit examples" ON)
option(BUILD_SWITCH_TUNIT_FRAMEWORK_EXAMPLES "Build Switch.TUnit.Framework examples" OFF)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
else ()
  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE})
endif ()

message(STATUS "Informations")
message(STATUS "  CMake version [${CMAKE_VERSION}]")
message(STATUS "  System [${CMAKE_SYSTEM}]")
message(STATUS "  Compiler [${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}]")
message(STATUS "  Build type [${CMAKE_BUILD_TYPE}]")
message(STATUS "  Install prefix [${CMAKE_INSTALL_PREFIX}]")
message(STATUS "  Output path [${EXECUTABLE_OUTPUT_PATH}]")

macro(subdirlist RESULT CURRENT_DIR)
  file(GLOB children RELATIVE ${CURRENT_DIR} ${CURRENT_DIR}/*)
  set(dirlist "")
  foreach (child ${children})
    if (IS_DIRECTORY ${CURRENT_DIR}/${child})
      LIST(APPEND dirlist ${child})
    endif ()
  endforeach ()
  set(${RESULT} ${dirlist})
endmacro()

macro(add_subdirectory_childrens CURRENT_DIR)
  subdirlist(SUBDIRS "${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}")
  foreach (SUBDIR ${SUBDIRS})
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/${SUBDIR}")
    set_target_properties(${SUBDIR} PROPERTIES FOLDER ${CURRENT_DIR})
  endforeach ()
endmacro ()

message(STATUS "Generating Switch Examples")
if (BUILD_DESIGN_PATTERNS_EXAMPLES)
  message(STATUS "  [X] DesignPatterns")
  add_subdirectory_childrens("DesignPatterns")
else()
  message(STATUS "  [ ] DesignPatterns")
endif()

if (BUILD_SWITCH_SYSTEM_EXAMPLES)
  message(STATUS "  [X] Switch.System")
  add_subdirectory_childrens("Switch.System")
else()
  message(STATUS "  [ ] Switch.System")
endif()

if (BUILD_SWITCH_SYSTEM_DRAWING_EXAMPLES)
  message(STATUS "  [X] Switch.System.Drawing")
  add_subdirectory_childrens("Switch.System.Drawing")
endif()

if (BUILD_SWITCH_SYSTEM_WINDOWS_FORMS_EXAMPLES)
  message(STATUS "  [X] Switch.System.Windows.Forms")
  add_subdirectory_childrens("Switch.System.Windows.Forms")
else()
  message(STATUS "  [ ] Switch.System.Windows.Forms")
endif()

if (BUILD_SWITCH_TUNIT_EXAMPLES)
  message(STATUS "  [X] Switch.TUnit")
  add_subdirectory_childrens("Switch.TUnit")
else()
  message(STATUS "  [ ] Switch.TUnit")
endif()

if (BUILD_SWITCH_TUNIT_FRAMEWORK_EXAMPLES)
  message(STATUS "  [X] Switch.TUnit.Framework")
  add_subdirectory_childrens("Switch.TUnit.Framework")
else()
  message(STATUS "  [ ] Switch.TUnit.Framework")
endif()

message(STATUS "Compiler [${CMAKE_CXX_COMPILER_ID}]")
message(STATUS "System [${CMAKE_SYSTEM}]")
if (NOT CMAKE_BUILD_TYPE)
  message(STATUS "Build type [{null}]")
else()
  message(STATUS "Build type [${CMAKE_BUILD_TYPE}]")
endif()
message(STATUS "Install prefix [${CMAKE_INSTALL_PREFIX}]")
